opam-version: "2.0"
name: "irmin-indexeddb"
synopsis: "Irmin backend using the web-browser's IndexedDB store"
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "ISC"
homepage: "https://github.com/talex5/irmin-indexeddb"
bug-reports: "https://github.com/talex5/irmin-indexeddb/issues"
depends: [
  "ocaml"
  "base64" {>= "3.0.0"}
  "irmin" {>= "0.10.0" & < "0.11.0"}
  "cstruct" {>= "1.7.0"}
  "js_of_ocaml" {>= "3.0"}
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"
  "git" {= "1.7.1"}
  "lwt"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
dev-repo: "git+https://github.com/talex5/irmin-indexeddb.git"
description: """
This is an Irmin backend that stores the data in the web-browser's IndexedDB store.
For more information, see <http://roscidus.com/blog/blog/2015/06/22/cuekeeper-internals-irmin/>
"""
